--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <ul class="features list">
             <li class="feature-content">
               <div class="icon-item">
-                <svg class="feature-icon" width="64px" height="64px">
+                <svg class="feature-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -84,7 +84,7 @@
             </li>
             <li class="feature-content">
               <div class="icon-item">
-                <svg class="feature-icon" width="64px" height="64px">
+                <svg class="feature-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -96,7 +96,7 @@
             </li>
             <li class="feature-content">
               <div class="icon-item">
-                <svg class="feature-icon" width="64px" height="64px">
+                <svg class="feature-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -108,7 +108,7 @@
             </li>
             <li class="feature-content">
               <div class="icon-item">
-                <svg class="feature-icon" width="64px" height="64px">
+                <svg class="feature-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -176,28 +176,28 @@
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -219,28 +219,28 @@
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -262,28 +262,28 @@
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -305,28 +305,28 @@
                 <ul class="social-list list">
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a href="" class="social-list-link">
-                      <svg class="social-list-icon" width="16px" height="16px">
+                      <svg class="social-list-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -345,42 +345,42 @@
           <ul class="customers-list list">
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo" width="104px" height="56px">
+                <svg class="customers-logo" width="104" height="56">
                   <use href="./images/icons.svg#icon-customer1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo" width="104px" height="56px">
+                <svg class="customers-logo" width="104" height="56">
                   <use href="./images/icons.svg#icon-customer2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo" width="104px" height="56px">
+                <svg class="customers-logo" width="104" height="56">
                   <use href="./images/icons.svg#icon-customer3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo" width="104px" height="56px">
+                <svg class="customers-logo" width="104" height="56">
                   <use href="./images/icons.svg#icon-customer4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo" width="104px" height="56px">
+                <svg class="customers-logo" width="104" height="56">
                   <use href="./images/icons.svg#icon-customer5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
               <a href="" class="customers-link">
-                <svg class="customers-logo" width="104px" height="56px">
+                <svg class="customers-logo" width="104" height="56">
                   <use href="./images/icons.svg#icon-customer6"></use>
                 </svg>
               </a>
@@ -406,28 +406,28 @@
           <ul class="social-list list footer-list">
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+                <svg class="social-list-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+                <svg class="social-list-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+                <svg class="social-list-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+                <svg class="social-list-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
