--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
           >
           <ul class="site-nav list">
             <li class="item">
-              <a class="nav-link link" href="./index.html">Studio</a>
+              <a class="nav-nk link" href="./index.html">Studio</a>
             </li>
             <li class="item">
               <a class="nav-link link" href="./portfolio.html">Portfolio</a>
@@ -226,28 +226,28 @@
           <ul class="social-list list footer-list">
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+                <svg class="social-list-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+                <svg class="social-list-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+                <svg class="social-list-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item footer-item">
               <a href="" class="social-list-link footer-social-link">
-                <svg class="social-list-icon" width="16px" height="16px">
+                <svg class="social-list-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
